# understanging_ddd

./: .gitignore  Makefile  pyproject.toml  setup.cfg
cosmic/: model.py
tests/: test_model.py
