[tool.poetry]
name = "understanging_ddd"
version = "0.1.0"
description = ""
authors = ["goncharoman <goncharoman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
